--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
 
-    <ListView
+    <!--<ListView
         android:id="@+id/app_List"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -16,23 +16,43 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_View" />
+        -->
+
 
     <SearchView
         android:id="@+id/search_View"
         android:layout_width="0dp"
 
         android:layout_height="41dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginStart="7dp"
         android:iconifiedByDefault="false"
-        android:queryHint="Search Here"
+        android:queryHint="@string/appwidget_text"
+        app:layout_constraintBottom_toTopOf="@+id/app_List"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <requestFocus />
 
     </SearchView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/app_List"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="7dp"
+        android:scrollbars="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_View" />
+
 
 
 </android.support.constraint.ConstraintLayout>
