--- a/app/src/main/res/layout/app_list_widget.xml
+++ b/app/src/main/res/layout/app_list_widget.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/widget_margin">
+
 
     <TextView
         android:id="@+id/appwidget_text"
@@ -15,13 +17,24 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="#55000000"
+        android:paddingLeft="10dp"
         android:contentDescription="@string/appwidget_text"
-        android:gravity="center"
+        android:gravity="center_vertical"
+        android:background="@drawable/rounded_corner"
+        android:layout_alignParentLeft="true"
         android:text="@string/appwidget_text"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="italic" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="19dp"
+        android:src="@drawable/ic_search_black_24dp"/>
 
 
 </RelativeLayout>
