--- a/app/src/main/res/layout/simple_item_view.xml
+++ b/app/src/main/res/layout/simple_item_view.xml
@@ -1,9 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/appName"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view1"
     android:layout_width="match_parent"
-    android:layout_height="70sp"
-    android:textSize="17sp"
-    android:textStyle="bold">
+    android:layout_height="80dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:background="#FFFFFF"
+    android:foreground="?attr/selectableItemBackground"
+    android:clickable="true"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="5dp"
+    app:cardMaxElevation="5dp"
+    app:contentPadding="5dp">
+    <!--card_view:cardElevation="5dp"-->
+    <!--card_view:contentPadding="5dp"-->
+    <!--card_view:cardCornerRadius="5dp"-->
+    <!--card_view:cardMaxElevation="5dp"-->
+    <!--android:layout_margin="5dp">-->
 
-</TextView>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="73dp">
+
+
+        <ImageView
+            android:id="@+id/App_imageView1"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="11dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="11dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/simple_text2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="11dp"
+            android:background="#D3D3D3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/simple_text2"
+            app:layout_constraintStart_toEndOf="@+id/App_imageView1"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/simple_text2"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/App_imageView1"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
