--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#2E86C1</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorView">#D3D3D3</color>
+
+    <!-- Screens background color-->
+    <color name="bg_screen1">#1976D2</color>
+    <color name="bg_screen2">#00796B</color>
+    <color name="bg_screen3">#303F9F</color>
+    <color name="bg_screen4">#E64A19</color>
+
+    <!-- dots inactive colors -->
+    <color name="dot_dark_screen1">#ffffff</color>
+    <color name="dot_dark_screen2">#ffffff</color>
+    <color name="dot_dark_screen3">#ffffff</color>
+    <color name="dot_dark_screen4">#ffffff</color>
+
+    <!-- dots active colors -->
+    <color name="dot_light_screen1">#E64A19</color>
+    <color name="dot_light_screen2">#303F9F</color>
+    <color name="dot_light_screen3">#00796B</color>
+    <color name="dot_light_screen4">#1976D2</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+        <item>@color/dot_dark_screen4</item>
+    </array>
 </resources>
