--- a/app/src/main/res/layout/simple_item.xml
+++ b/app/src/main/res/layout/simple_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:layout_marginBottom=".5dp"
-    android:background="#FFFFFF"
-    android:foreground="?attr/selectableItemBackground"
+    app:cardBackgroundColor="?attr/cardcolor"
     android:clickable="true"
     app:cardCornerRadius="1dp"
     app:cardElevation="0dp"
@@ -59,7 +59,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="14dp"
             android:gravity="center_vertical"
-            android:textColor="#455A64"
+            android:textColor="?attr/textcolor"
             android:textSize="14sp"
             android:textStyle="italic|bold"
             android:text="Testing"
