--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,8 @@
     </array>
 
     <color name="red">#ff0000</color>
+
+    <color name="white">#ffff</color>
+    <color name="black">#000</color>
+
 </resources>
