--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,10 +12,12 @@
         <item name="tintcolor">#383838</item>
         <item name="buttoncolor">#2196F3</item>
         <item name="cardcolor">#ffffff</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="android:editTextColor">#000000</item>
         <item name="ripplecolor">#acacac</item>
+        <item name="searchIconColor">@drawable/ic_face_cross</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
 
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
@@ -50,16 +52,16 @@
         <item name="colorPrimary">#212121</item>
         <item name="colorPrimaryDark">#000</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="backgroundcolor">#303030</item>
+        <item name="backgroundcolor">#787878</item>
         <item name="textcolor">#ffffff</item>
         <item name="tintcolor">#ffffff</item>
         <item name="buttoncolor">#2196F3</item>
         <item name="cardcolor">#2b2b2b</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="android:editTextColor">@android:color/white</item>
         <item name="ripplecolor">#dcdcdc</item>
-
+        <item name="searchIconColor">@drawable/ic_search_white</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
 
