--- a/app/src/main/res/layout/activity_ad_pop_up.xml
+++ b/app/src/main/res/layout/activity_ad_pop_up.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content" />
 
     <ProgressBar
+        android:id="@+id/reward_progress_bar"
         android:layout_toRightOf="@+id/reward_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -28,6 +29,13 @@
         android:textSize="40sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="228dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
