Implemented Dark Theme successfully

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,7 +10,7 @@
         <attr name="cardcolor" format="color"/>
         <attr name="ripplecolor" format="color"/>
         <attr name="toolbarColor" format="color"/>
-        <attr name="searchIconColor" format="integer">
+        <attr name="searchIconColor" format="reference">
 
         </attr>
 
