--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,21 @@
         app:layout_constraintTop_toBottomOf="@+id/search_View" />
         -->
 
+    <Button
+        android:id="@+id/go_to_playStore"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Search on PlayStore"
+        android:visibility="gone"
+        android:layout_marginTop="135dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="419dp" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/app_List"
@@ -71,6 +86,23 @@
     <!--app:layout_constraintHorizontal_bias="0.541"-->
     <!--app:layout_constraintStart_toEndOf="@+id/search_View"-->
     <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+
+
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Or Tap SUBMIT"-->
+        <!--android:textSize="20dp"-->
+        <!--android:gravity="center"-->
+        <!--android:layout_marginTop="185dp"-->
+        <!--android:layout_marginStart="50dp"-->
+        <!--android:layout_marginEnd="108dp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="1.0"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--tools:layout_editor_absoluteY="419dp"/>-->
 
 
 </android.support.constraint.ConstraintLayout>
