--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,9 +14,11 @@
         <item name="cardcolor">#ffffff</item>
         <item name="android:editTextColor">#000000</item>
         <item name="ripplecolor">#acacac</item>
-        <item name="searchIconColor">@drawable/ic_face_cross</item>
+        <item name="searchIconColor">@drawable/ic_search</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:actionButtonStyle">@style/MyActionButtonStyle</item>
+
 
 
 
@@ -62,6 +64,8 @@
         <item name="searchIconColor">@drawable/ic_search_white</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:actionButtonStyle">@style/MyActionButtonStyle</item>
+
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
 
@@ -70,6 +74,11 @@
     <style name="WindowAnimationTransition">
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
+    <style name="MyActionButtonStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:minWidth">20dp</item>
+        <item name="android:padding">100dp</item>
     </style>
 
 
