--- a/app/src/main/res/layout/custom_notification.xml
+++ b/app/src/main/res/layout/custom_notification.xml
@@ -31,21 +31,21 @@
         android:textColor="#000"
         android:textSize="15dp" />
 
-    <ImageView
-        android:clickable="true"
-        android:id="@+id/clearButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_clear"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true" />
+    <!--<ImageView-->
+    <!--android:clickable="true"-->
+    <!--android:id="@+id/clearButton"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@drawable/ic_clear"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_centerVertical="true" />-->
 
     <!--<Button-->
-        <!--android:id="@+id/clearButton"-->
-        <!--android:text="Clear"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_centerVertical="true" />-->
+    <!--android:id="@+id/clearButton"-->
+    <!--android:text="Clear"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_centerVertical="true" />-->
 
 </RelativeLayout>
